<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b1633">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_margin="15dp"
        android:background="#242f4c">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">
        <TextView
            android:id="@+id/text_situps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:textColor="#ECF0F1"
            android:textSize="18sp"
            android:text="@string/app_situps"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textColor="#ECF0F1"
            android:text=":"/>
        <TextView
            android:id="@+id/text_situpsvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_column="3"
            android:textSize="18sp"
            android:textColor="#ECF0F1"
            android:text="30 Repetitions"/>
        </TableRow>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#ECF0F1"/>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/text_crunches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#ECF0F1"
                android:text="@string/app_crunches"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#ECF0F1"
                android:text=":"/>
            <TextView
                android:id="@+id/text_crunchesvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3"
                android:textSize="18sp"
                android:textColor="#ECF0F1"
                android:text="15 Repetitions"/>
        </TableRow>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#ECF0F1"
            />
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/text_legraises"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#ECF0F1"
                android:text="@string/app_legraises"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textColor="#ECF0F1"
                android:text=":"/>
            <TextView
                android:id="@+id/text_legraisesvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3"
                android:textColor="#ECF0F1"
                android:textSize="18sp"
                android:text="16 Repetitions"/>
        </TableRow>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#ECF0F1"/>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/text_plank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:textColor="#ECF0F1"
                android:textSize="18sp"
                android:text="@string/app_plank"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#ECF0F1"
                android:text=":"/>
            <TextView
                android:id="@+id/text_plankvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3"
                android:textSize="18sp"
                android:textColor="#ECF0F1"
                android:text="45 Seconds"/>

    </TableRow>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#ECF0F1"/>
    </TableLayout>
    <Button
        android:id="@+id/buttonad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:background="@drawable/btn_bg"
        android:layout_margin="15dp"
        android:text="GoogleAd"/>

    <Button
      android:id="@+id/button_start"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:textColor="#000"
        android:background="@drawable/btn_bg"
        android:layout_margin="15dp"
      android:text="@string/app_start"/>
</LinearLayout>